syntax = "proto3";

package auth;

option go_package = "studentgit.kata.academy/romanmalcev89665_gmail.com/go-kata/new-repository/MicroService/auth/proto";

// Сервис аутентификации и авторизации
service AuthService {
  // Регистрация нового пользователя
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Аутентификация пользователя
  rpc Login(LoginRequest) returns (AuthResponse);

  // Валидация JWT токена
  rpc ValidateToken(TokenRequest) returns (TokenResponse);
}

// Запрос на регистрацию
message RegisterRequest {
  string email = 1;      // Email пользователя
  string password = 2;   // Пароль (минимум 8 символов)
}

// Ответ на регистрацию
message RegisterResponse {
  string user_id = 1;    // Идентификатор пользователя
}

// Запрос на вход
message LoginRequest {
  string email = 1;      // Email пользователя
  string password = 2;   // Пароль
}

// Ответ с токеном
message AuthResponse {
  string token = 1;         // JWT токен
  string user_id = 2;       // Идентификатор пользователя
  string expires_at = 3;    // Время истечения токена в формате ISO 8601
}

// Запрос на валидацию токена
message TokenRequest {
  string token = 1;      // JWT токен для проверки
}

// Ответ валидации
message TokenResponse {
  bool valid = 1;        // Статус валидности
  string user_id = 2;    // Идентификатор пользователя
  string expires_at = 3;  // Время истечения токена в формате ISO 8601
}

// Сообщение об ошибке (опционально)
message Error {
  string message = 1;    // Описание ошибки
  int32 code = 2;        // Код ошибки
}